manifests/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: ./kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: web
  name: web
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: web
  strategy: { }
  template:
    metadata:
      annotations:
        kompose.cmd: ./kompose convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/manifests-default: "true"
        io.kompose.service: web
    spec:
      containers:
        - image: ghcr.io/5-2-5-equipe-2/nuit-info-2023:1.9.0
          name: web
          ports:
            - containerPort: 3000
              hostPort: 3000
              protocol: TCP
          resources: { }
      restartPolicy: Always
status: { }
